examples/test/testpolicy3991.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy3991
  namespace: namespace361
spec:
  podSelector:
    matchLabels:
      key27: value29
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key31: value21
          key1: value0
      podSelector:
        matchLabels:
          key46: value35
          key27: value1
